--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
          </article>
 
          <footer>
-           Made with ❤️ in Your Location Here. © 2018 All Rights Reserved
+           Made with ❤️ Phoenix, Arizona. © 2018 All Rights Reserved
          </footer>
        </main>
      </div>
