Add portfolio.html page

--- a/about.html
+++ b/about.html
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-=======
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -20,27 +18,24 @@
     <div class="site-subheader">Web Developer</div>
     <ul class="site-navigation">
       <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-        <li>
-        <a href="about.html"><i class="fas fa-id-card"></i> About</a></li>
+
+      <li><a href="about.html"><i class="fas fa-id-card"></i>About</a></li>
+      <li><a href="contact.html"><i class="fas fa-comment-dots"></i>Contact</a></li>
+
+
        <li>
-        <a href="contact.html"><i class="fas fa-comment-dots"></i> Contact
-        </a>
+        <a href="portfolio.html"><i class="fas fa-gem"></i> Portfolio</a>
       </li>
+
     </ul>
   </div>
 </nav>
 
-  <div class="menu">
-  <div class="menu-icon" id="sidebarCollapse">
-    <i class="fas fa-bars"></i>
-    <span class="mobile-header"> Your Sloane Siverson: Web Developer</span>
-  </div>
-</div>
->>>>>>> Add about.html page
 <main>
   <div class="menu">
     <div class="menu-icon" id="sidebarCollapse"><i class="fas fa-bars"></i> <span class="mobile-header">Your Name: Web Developer</span></div>
   </div>
+
   <h1>About</h1>
   <article>
     <img class="about-image" src="http://via.placeholder.com/200" />
@@ -60,10 +55,8 @@
     </p>
   </article>
   <footer>
-<<<<<<< HEAD
-    Made with ❤️ in Your Location Here. © 2018 All Rights Reserved
-=======
+
     Made with ❤️ Phoenix,Arizona. © 2018 All Rights Reserved
->>>>>>> Add about.html page
+
   </footer>
 </main>
